# FPiGA-Audio-Hat

./: .gitmodules  README.md  gettingstarted.md  userguide.md
CoreDesign/: README.md
CoreDesign-Circle/: README.md
CoreDesign/Source/devicetree/FPiGA-Audio/: fpiga_audio.dts
CoreDesign/Source/hdl/: audio_dsp_top.vhd  fpigaAudioHatTop.vhd  i2c_25k.cst
CoreDesign/Source/hdl/dsp_pll/: dsp_pll.ipc  dsp_pll.mod  dsp_pll.v  dsp_pll.vhd  dsp_pll_tmp.v  dsp_pll_tmp.vhd
CoreDesign/Source/hdl/hdl-lib/Audio/FPiGA_I2SCore/: fpiga_i2s.vhd
CoreDesign/Source/hdl/hdl-lib/Comms/FPiGA_I2CSlv/: FPiGA-I2C-Core.vhd  i2cslv.vhd
CoreDesign/Source/hdl/hdl-lib/DSP/FPiGA_AudioDSP/: fpiga_audio_package.vhd
CoreDesign/Source/hdl/hdl-lib/DSP/FPiGA_Wavetable/: fpiga_wavetable.vhd
CoreDesign/Source/userspace/FPiGA-Synthesizer/FPiGASynthesizer/: CMakeLists.txt  mainwindow.ui
CoreDesign/Source/userspace/I2cDevices/: SSM2603.cpp  SSM2603.h  i2cdevicelib.cpp  i2cdevicelib.h  main.cpp
CoreDesign/Source/userspace/examples/fpigaSynthCmd/: main.cpp
CoreDesign/Source/userspace/fpigaAudioLib/: CMakeLists.txt  install.sh
CoreDesign/Source/userspace/fpigaAudioLib/fpigaAudioLib/src/: fpiga_audio.cpp
CoreDesign/Source/userspace/fpigaAudioLib/include/: fpiga_audio.h
FPiGA-CoreLib/: README.md
FPiGA-CoreLib/firmware/jtagprogrammer-binary/: dirtyJtag-rp2040zero.uf2
FPiGA-CoreLib/userspace/FPiGA-Library/: buildall.sh
FPiGA-CoreLib/userspace/FPiGA-Library/fpigaAudioLib/: CMakeLists.txt
FPiGA-CoreLib/userspace/FPiGA-Library/fpigaAudioLib/src/: fpiga_audio.cpp
FPiGA-CoreLib/userspace/FPiGA-Library/fpigaAudioTest/: CMakeLists.txt  build.sh
hw_rev1_0/source/hdl/: clks.sdc
hw_rev1_0/source/userspace/: buildall.sh
hw_rev1_0/source/userspace/examples/fpigaAudioTest/: main.cpp
hw_rev1_0/source/userspace/examples/fpigaSynthCmd/: CMakeLists.txt
hw_rev1_0/source/userspace/fpigaAudioLib/include/: rct_fpiga.h
hw_rev1_0/source/userspace/fpigaAudioLib/src/: fpiga_audio.cpp
(+28 files in other folders)
